argocd/resources/litellm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: litellm
  labels:
    kubernetes.io/metadata.name: litellm
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
